force-app/main/default/objects/Lightning_Knowledge__kav/fields/Article_Body__c.field-meta.xml
<CustomField>
    <fullName>Article_Body__c</fullName>
    <description>NICC-042989 - Business Systems related field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Article Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>