force-app/main/default/objects/Lightning_Knowledge__kav/fields/How_Do_I_Resolution__c.field-meta.xml
<CustomField>
    <fullName>How_Do_I_Resolution__c</fullName>
    <description>Enter the Resolution in the numbered step format using 1)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the Resolution in the numbered step format using 1)</inlineHelpText>
    <label>Resolution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>