force-app/main/default/objects/Lightning_Knowledge__kav/fields/Related_CR__c.field-meta.xml
<CustomField>
    <fullName>Related_CR__c</fullName>
    <businessOwnerUser>abencivenga@newmarketinc.com.sbfull</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-046348</description>
    <inlineHelpText>Change Request record related to this Lightning Knowledge article.</inlineHelpText>
    <label>Related CR</label>
    <referenceTo>SFDC_CSP_Development_Request__c</referenceTo>
    <relationshipLabel>Lightning Knowledge</relationshipLabel>
    <relationshipName>Lightning_Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>