force-app/main/default/objects/Lightning_Knowledge__kav/fields/Solution_Domain__c.field-meta.xml
<CustomField>
    <fullName>Solution_Domain__c</fullName>
    <description>created for Lightning Knowledge NICC-033541</description>
    <label>Solution Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Solution_Domain</valueSetName>
    </valueSet>
</CustomField>