force-app/main/default/objects/Lightning_Knowledge__kav/fields/Technical_Document_Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Technical_Document_Internal_Notes__c</fullName>
    <description>This is the Author of the article /Date of Origin/Site Reporting/Editor</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the Author of the article /Date of Origin/Site Reporting/Editor</inlineHelpText>
    <label>Internal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>