force-app/main/default/objects/Lightning_Knowledge__kav/fields/Technical_Document_ResolutionText__c.field-meta.xml
<CustomField>
    <fullName>Technical_Document_ResolutionText__c</fullName>
    <description>The steps for the resolution</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The steps for the resolution</inlineHelpText>
    <label>ResolutionText</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>