force-app/main/default/objects/Lightning_Knowledge__kav/recordTypes/Business_Systems.recordType-meta.xml
<RecordType>
    <fullName>Business_Systems</fullName>
    <active>true</active>
    <description>NICC-042989 - Record Type reserved for internal articles for Business Systems</description>
    <label>Business Systems</label>
</RecordType>