force-app/main/default/objects/Lightning_Knowledge__kav/recordTypes/How_Do_I.recordType-meta.xml
<RecordType>
    <fullName>How_Do_I</fullName>
    <active>true</active>
    <label>How_Do_I</label>
</RecordType>