force-app/main/default/objects/Lightning_Knowledge__kav/recordTypes/Procedural.recordType-meta.xml
<RecordType>
    <fullName>Procedural</fullName>
    <active>true</active>
    <description>NICC-033541</description>
    <label>Procedural</label>
</RecordType>