force-app/main/default/objects/Lightning_Knowledge__kav/recordTypes/Technical_Document.recordType-meta.xml
<RecordType>
    <fullName>Technical_Document</fullName>
    <active>true</active>
    <label>Technical_Document</label>
</RecordType>