force-app/main/default/objects/Lightning_Knowledge__kav/listViews/Multi_Edit_Validation_Status.listView-meta.xml
<ListView>
    <fullName>Multi_Edit_Validation_Status</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lightning_Knowledge__kav.How_Do_I</value>
    </filters>
    <filters>
        <field>TITLE</field>
        <operation>startsWith</operation>
        <value>SA</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Multi-Edit Validation Status</label>
</ListView>