force-app/main/default/objects/Lightning_Knowledge__kav/listViews/Published_by_Solution_Domain.listView-meta.xml
<ListView>
    <fullName>Published_by_Solution_Domain</fullName>
    <columns>IS_CHANNEL_CSP</columns>
    <columns>TITLE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>Solution_Domain__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022 12:00 AM</value>
    </filters>
    <label>Published by Solution Domain</label>
</ListView>